@@ -15,7 +15,6 @@ exists (select 1 from ALL_Allele a where s._Strain_key = a._Strain_key)
 or exists (select 1 from ALL_CellLine a where s._Strain_key = a._Strain_key)
 or exists (select 1 from GXD_Genotype a where s._Strain_key = a._Strain_key)
 or exists (select 1 from MLD_Fish a where s._Strain_key = a._Strain_key)
-or exists (select 1 from PRB_Allele_Strain a where s._Strain_key = a._Strain_key)
 or exists (select 1 from PRB_Source a where s._Strain_key = a._Strain_key)
 or exists (select 1 from CRS_Cross a where s._Strain_key = a._femaleStrain_key)
 or exists (select 1 from CRS_Cross a where s._Strain_key = a._maleStrain_key)
@@ -36,7 +35,6 @@ and not exists (select 1 from ALL_Allele a where s._Strain_key = a._Strain_key)
 and not exists (select 1 from ALL_CellLine a where s._Strain_key = a._Strain_key)
 and not exists (select 1 from GXD_Genotype a where s._Strain_key = a._Strain_key)
 and not exists (select 1 from MLD_Fish a where s._Strain_key = a._Strain_key)
-and not exists (select 1 from PRB_Allele_Strain a where s._Strain_key = a._Strain_key)
 and not exists (select 1 from PRB_Source a where s._Strain_key = a._Strain_key)
 and not exists (select 1 from CRS_Cross a where s._Strain_key = a._femaleStrain_key)
 and not exists (select 1 from CRS_Cross a where s._Strain_key = a._maleStrain_key)
